somewhat works for firefox now

--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>Fuzbal</title>
   <link href="./css/bootstrap.min.css" rel="stylesheet">
   <link href="./css/popup.css" rel="stylesheet">
