--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://www.google.com"> -->
   <meta charset="utf-8">
   <title>Fuzbal</title>
   <link href="./css/bootstrap.min.css" rel="stylesheet">
